Fix post grid spacing and donate link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ footer ul li a {
   margin-top: 6rem;
 }
 
+.wp-block-query ul.is-flex-container li.wp-block-post + li.wp-block-post {
+  margin-top: 0;
+}
+
 nav.wp-block-query-pagination {
   margin-top: 6rem;
 }
